<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".DosActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/amaranth_bold_italic"
                android:text="Dont's"
                android:textColor="#ffffff"
                android:textSize="30dp"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:padding="20dp"
            android:textAlignment="center">

            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="18dp"
                android:paddingRight="15dp"
                android:text="@string/content11"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/content12"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/content13"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/content14"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:text="@string/content15"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/content16"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/content17"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/colored_rectangle"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="Do not take any medication without the doctor's advice"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

    </ScrollView>